--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,9 +28,7 @@
           
           {% if site.linkedin_username %}
           <li>
-            <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
-            <i class="fa fa-linkedin"></i> LinkedIn
-            </a>
+            {% include icon-linkedin.html username=site.linkedin_username %}
           </li>
           {% endif %}
         </ul>
