--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,9 @@
 ---
+---
+
+@import 'jekyll-theme-cayman';
+
+---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
